==> RT-Thread/rt-thread/bsp/mm32/libraries/HAL_Drivers/drivers/drv_gpio.c <==
#include <rtthread.h>
#include <rtdevice.h>
#include <board.h>
#include <rthw.h>
#include "drv_gpio.h"
#define LOG_TAG             "drv.gpio"
#include <rtdbg.h>
#define PIN_NUM(port, no)       (((((port) & 0xFu) << 4) | ((no) & 0xFu)))
#define PIN_PORT(pin)           ((rt_uint8_t)(((pin) >> 4) & 0xFu))
#define PIN_NO(pin)             ((rt_uint8_t)((pin) & 0xFu))
#define ITEM_NUM(items)         (sizeof(items) / sizeof((items)[0]))

int rt_hw_pin_init(void)
{
#if defined(SOC_SERIES_MM32F3277)
#ifdef RCC_APB2_PERIPH_SYSCFG
    RCC_EnableAPB2Periphs(RCC_APB2_PERIPH_SYSCFG, true);
#endif
#endif

    return rt_device_pin_register("pin", &mm32_pin_ops, RT_NULL);
}
